correccion sorteo fetch

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -5,13 +5,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Sorteo</title>
   <!-- <link rel="stylesheet" href="./css/sorteo.css"> -->
   <!-- <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script> -->
 </head>
 
 <body>
-  <section class="sorteo-dos" id ="container-sorteo-dos">
+  <section class="sorteo-dos" id="container-sorteo-dos">
     <div class="sorteo-dos-container">
       <h2>Sorteo Digital</h2>
       <ul id="lista-jugadores"></ul>
