--- a/src/public/index.html
+++ b/src/public/index.html
@@ -42,17 +42,18 @@
       <!-- container sorteo -->
       <div class="sorteo-dos-container">
         <h2>Sorteo Digital</h2>
+        <h4>ingresar dato</h4>
         <div class="nombres">
           <input id="sorteo-dos" class="sorteo-dos" type="text" placeholder="Nombre" />
-          <button id="agregar-jugador" class="agregar-jugador" type="button" value="Agregar Jugador"><i
+          
+          <div class="botones">
+            <button id="agregar-jugador" class="agregar-jugador" type="button"><i
               class="fa-solid fa-plus"></i></button>
-        </div>
-        <div class="botones">
-
-          <button id="ganador-btn-dos" class="ganador-btn-dos" type="button" value="Sortear Ganador">
-            Sorteo
-          </button>
-        </div>
+              <button id="ganador-btn-dos" class="ganador-btn-dos" type="button" value="Sortear Ganador">
+                Sorteo
+              </button>
+            </div>
+          </div>
       </div>
 
       <!-- lista -->
