--- a/src/public/index.html
+++ b/src/public/index.html
@@ -23,7 +23,7 @@
   <header>
     <ul>
       <li class="home" id="home">home</li>
-      <li class="winner" id="winner">winner</li>
+      <li class="winnerBtn" id="winnerBtn">winner</li>
     </ul>
 
 
