modifie-variable-de-entorno-apiPost

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -75,7 +75,7 @@
 
     </section>
   </main>
-  <script src="./js/sorteo.js"></script>
+  <script src="./js/sorteo.js" type="module"></script>
   <script src="./js/getSorteo.js"></script>
   <script src="./js/button.js"></script>
 </body>
